hphp/test/slow/break_statement/zero.php.expectf
HipHop Fatal error: 'break' operator accepts only positive numbers in %s/test/slow/break_statement/zero.php on line 5
